<resources>
    <string name="app_name">Popular Movies</string>
    <string name="loading">Loading</string>
    <string name="no_data">No Data</string>
    <string name="movie_cover">Move Cover image</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest-rated</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release date</string>
    <string name="original_title">Original title</string>
    <string name="website">Website</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="error_fetching_data">Error fetching API, please check your internet connection and try again</string>
    <string name="sort_movies">Sort movies by</string>
    <string name="retry">retry</string>
</resources>
